# repo-history-analyze

./: .gitignore  Makefile  README.md  pyproject.toml
src/notebooks/: chart_iterations.py  wordpress_code_evolution.py  wordpress_props_contributors.py
src/notebooks/data/: rolling_12week_stats.csv  weekly_stats.csv
src/repo_analyzer/: __main__.py  aggregator.py  cli.py  csv_writer.py  extractor.py  models.py  repository.py  version_mapper.py
src/repo_analyzer/svn/: __init__.py  aggregator.py  cli.py  csv_writer.py  diff_cache.py  diff_fetcher.py  extractor.py  models.py  repository.py
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_repository.py
tests/integration/svn/: __init__.py  test_svn_e2e.py  test_svn_integration.py
tests/unit/: test_aggregator.py  test_cli_args.py  test_csv_writer.py  test_extractor.py  test_models.py  test_repository_generic.py  test_rolling_aggregator.py  test_version_mapper.py
tests/unit/svn/: __init__.py  test_diff_cache.py  test_diff_fetcher.py  test_svn_aggregator.py  test_svn_cli.py  test_svn_csv_writer.py  test_svn_extractor.py  test_svn_models.py  test_svn_repository.py
