[project]
name = "repo-history-analyze"
version = "0.1.0"
description = "Analyze git repository history and generate statistical reports"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.45",
    "pydriller>=2.9",
]

[project.scripts]
repo-analyzer = "repo_analyzer.cli:main"

[project.optional-dependencies]
viz = [
    "marimo>=0.10.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "kaleido>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--import-mode=importlib", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_analyzer"]
